the_project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
          - name: shared-volume
            persistentVolumeClaim:
              claimName: shared-claim
      containers:
        - name: todo-app
          image: marttivesalainen/dwk-todo-app:1.13
          imagePullPolicy: Always
          volumeMounts:
            - name: shared-volume
              mountPath: /cache
