the_project/manifests/todo-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: todo-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: shared-volume
          persistentVolumeClaim:
            claimName: shared-claim
      containers:
        - name: todo-app
          image: marttivesalainen/dwk-todo-app:2.2
          imagePullPolicy: Always
          volumeMounts:
            - name: shared-volume
              mountPath: /cache
