the_project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
spec:
  type: NodePort
  selector:
    app: todo-app
  ports:
    - name: http
      nodePort: 30080 # the port exposed on every cluster node for external access
      protocol: TCP
      port: 1234 # the port exposed by the Service for internal cluster access
      targetPort: 3000 # the port the container listens on
